--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -10,7 +10,7 @@
           <a mat-list-item href="udalosti"><mat-icon>group</mat-icon>Události</a>
           <!--<a mat-list-item href="artikl"><mat-icon>shopping_cart</mat-icon>Artikl</a>-->
           <!--<a mat-list-item href="chat"><mat-icon>textsms</mat-icon>Chat</a>-->
-          <!--<a mat-list-item href="video"><mat-icon>live_tv</mat-icon>Video</a>-->
+          <a mat-list-item href="video"><mat-icon>live_tv</mat-icon>Video</a>
 
           <ng-container *ngIf="userAuthService.isLoggedAdmin()">
             <mat-divider></mat-divider>
