--- a/src/app/page-video/page-video.component.css
+++ b/src/app/page-video/page-video.component.css
@@ -2,8 +2,28 @@ mat-form-field {
     width: 100%;
 }
 
-iframe {
-    width: 100%;
-    text-align: center;
-    height: 60vh;
+.video-card {
+  width: 300px;
+  height: 450px;
+  margin: 1rem;
+  float: left;
+}
+
+.video-card-mobile {
+  margin-bottom: 1rem;
+  height: 450px;
+}
+
+.mat-card-content {
+  height: 35px;
+}
+
+.mat-card-header {
+  height: 80px;
+}
+
+.choose-alert {
+  margin-top: 3rem;
+  text-align: center;
+  margin-left: 0px !important;
 }
