--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -17,6 +17,7 @@
             <mat-toolbar>Admin</mat-toolbar>
             <a mat-list-item href="admin-nastenka"><mat-icon class="admin-icon">assignment</mat-icon>Nástěnka</a>
             <a mat-list-item href="admin-udalosti"><mat-icon class="admin-icon">group</mat-icon>Události</a>
+            <a mat-list-item href="admin-videa"><mat-icon class="admin-icon">live_tv</mat-icon>Videa</a>
             <a mat-list-item href="admin-clanky"><mat-icon class="admin-icon">article</mat-icon>Články</a>
             <a mat-list-item href="admin-clenove"><mat-icon class="admin-icon">face</mat-icon>Členové</a>
           </ng-container>
