--- a/src/app/page-adminmembers/page-adminmembers.component.css
+++ b/src/app/page-adminmembers/page-adminmembers.component.css
@@ -13,3 +13,9 @@ mat-form-field {
 table {
   width: 100%;
 }
+
+.choose-alert {
+  margin-top: 3rem;
+  text-align: center;
+  margin-left: 0px !important;
+}
