--- a/src/app/page-adminmembers/page-adminmembers.component.html
+++ b/src/app/page-adminmembers/page-adminmembers.component.html
@@ -9,17 +9,18 @@
 
         <mat-form-field appearance="outline">
           <mat-label>Jméno</mat-label>
-          <input (keyup)="emptyFieldsCheck()" matInput [(ngModel)]="member.name">
+          <input (keyup)="buildLogin();emptyFieldsCheck();" matInput [(ngModel)]="member.name">
         </mat-form-field>
 
         <mat-form-field appearance="outline">
           <mat-label>Příjmení</mat-label>
-          <input (keyup)="emptyFieldsCheck()" matInput [(ngModel)]="member.surname">
+          <input (keyup)="buildLogin();emptyFieldsCheck();" matInput [(ngModel)]="member.surname">
         </mat-form-field>
 
         <mat-form-field appearance="outline">
           <mat-label>Login</mat-label>
-          <input (keyup)="emptyFieldsCheck()" matInput [(ngModel)]="member.login">
+          <input (keyup)="loginUniqueCheck(); emptyFieldsCheck(); " matInput [(ngModel)]="member.login">
+          <mat-hint *ngIf="loginExists" style="color: #f44336;">Login již existuje.</mat-hint>
         </mat-form-field>
 
         <mat-form-field appearance="outline">
@@ -70,7 +71,7 @@
 
       <mat-form-field>
         <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+        <input [(ngModel)]="filter" matInput (keyup)="applyFilter()" placeholder="Ex. ium" #input>
       </mat-form-field>
 
       <table mat-table
@@ -136,6 +137,7 @@
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
         <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
       </table>
+      <h1 *ngIf="filter.length === 0" class="choose-alert">Použij filtr.</h1>
     </mat-tab>
   </mat-tab-group>
 
