--- a/src/app/dialog-updatemember/dialog-updatemember.component.html
+++ b/src/app/dialog-updatemember/dialog-updatemember.component.html
@@ -19,7 +19,7 @@
 
   <mat-form-field appearance="outline">
     <mat-label>Škola</mat-label>
-    <mat-select [(value)]="data.m.school">
+    <mat-select (selectionChange)="validate()" [(value)]="data.m.school">
       <mat-option value="0">Všechny</mat-option>
       <mat-option value="1">Ostrava</mat-option>
       <mat-option value="2">Třinec</mat-option>
