--- a/src/app/page-adminevents/page-adminevents.component.html
+++ b/src/app/page-adminevents/page-adminevents.component.html
@@ -41,7 +41,7 @@
 
     <ng-container *ngIf="!device.IsMobile()" matColumnDef="members">
       <th mat-header-cell *matHeaderCellDef> Přihlášených </th>
-      <td (click)="Expanded(element);" mat-cell *matCellDef="let element" matTooltip="Přihlášených / Potvrzených / Přítomných / Limit"> {{ event.members }} / {{ event.confirmed }} / {{ event.present }} / {{ event.memberlimit }} </td>
+      <td (click)="Expanded(element);" mat-cell *matCellDef="let element" matTooltip="Přihlášených / Potvrzených / Přítomných / Limit"> {{ element.members }} / {{ element.confirmed }} / {{ element.present }} / {{ element.memberlimit }} </td>
     </ng-container>
 
     <ng-container matColumnDef="control">
@@ -252,6 +252,13 @@
                 <ng-container matColumnDef="control">
                   <th mat-header-cell *matHeaderCellDef></th>
                   <td mat-cell *matCellDef="let element">
+                    <button mat-icon-button
+                            class="memberBtn"
+                            (click)="dialogMemberDelete(element.id)"
+                            color="warn"
+                            matTooltip="Smazat">
+                      <mat-icon>remove_circle_outline</mat-icon>
+                    </button>
                     <button mat-icon-button
                             class="memberBtn"
                             (click)="cancel(element.id)"
