logs po admin events

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -19,6 +19,7 @@
             <a mat-list-item href="admin-videa"><mat-icon class="admin-icon">live_tv</mat-icon>Videa</a>
             <a mat-list-item href="admin-clanky"><mat-icon class="admin-icon">article</mat-icon>Články</a>
             <a mat-list-item href="admin-clenove"><mat-icon class="admin-icon">face</mat-icon>Členové</a>
+            <a mat-list-item href="admin-log"><mat-icon class="admin-icon">computer</mat-icon>System Log</a>
           </ng-container>
       </mat-nav-list>
   </mat-sidenav>
@@ -34,7 +35,7 @@
           </button>
           <span>{{title}}</span>
           <p id="buttons">
-            <a href="https://www.wingtsunslezsko.cz">
+            <a href="https://www.wingtsunslezsko.cz" style="color: white;">
               <button
               mat-button
               matTooltip="www.wingtsunslezsko.cz">
