--- a/src/app/page-adminevents/page-adminevents.component.html
+++ b/src/app/page-adminevents/page-adminevents.component.html
@@ -36,7 +36,7 @@
 
     <ng-container *ngIf="!device.IsMobile()" matColumnDef="datetimeStart">
       <th mat-header-cell *matHeaderCellDef> Začátek </th>
-      <td (click)="Expanded(element);" mat-cell *matCellDef="let element"> {{ formatDate(element.datetimeStart).toLocaleString('cs-CZ')}} </td>
+      <td (click)="Expanded(element);" mat-cell *matCellDef="let element"> {{ formatDate(element.datetimeStart)}} </td>
     </ng-container>
 
     <ng-container *ngIf="!device.IsMobile()" matColumnDef="members">
@@ -69,7 +69,7 @@
                 style="float: right;"
                 color="warn"
                 [disabled]="!editor.Same"
-                (click)="dialogDelete(element.id)"
+                (click)="dialogDelete(element)"
                 matTooltip="Smazat">
           <mat-icon>delete</mat-icon>
         </button>
@@ -77,7 +77,7 @@
         <button mat-icon-button
                 style="float: right;"
                 color="primary"
-                (click)="copyEvent(element.id)"
+                (click)="copyEvent(element)"
                 matTooltip="Kopírovat">
           <mat-icon>file_copy</mat-icon>
         </button>
@@ -197,7 +197,7 @@
               <mat-card class="overview-card"
                         style="background-color: #e6e6e6;"
                         matTooltip="Klikni pro reset všech"
-                        (click)="dialogResetAll(event.id)">
+                        (click)="dialogResetAll(event)">
                 <mat-card-header>
                   <mat-card-title>{{event.members}}</mat-card-title>
                   <mat-card-subtitle>Přihlášených</mat-card-subtitle>
@@ -207,7 +207,7 @@
               <mat-card class="overview-card"
                         [ngClass]="(event.members-event.confirmed > 0)?'red':'green'"
                         matTooltip="Klikni pro potvrzení všech"
-                        (click)="dialogConfirmAll(event.id)">
+                        (click)="dialogConfirmAll(event)">
                 <mat-card-header>
                   <mat-card-title>{{event.members-event.confirmed}}</mat-card-title>
                   <mat-card-subtitle>Nepotvrzených</mat-card-subtitle>
@@ -217,7 +217,7 @@
               <mat-card class="overview-card"
                         [ngClass]="(event.confirmed-event.present > 0)?'red':'green'"
                         matTooltip="Klikni pro přítomnost všech"
-                        (click)="dialogPresentAll(event.id)">
+                        (click)="dialogPresentAll(event)">
                 <mat-card-header>
                   <mat-card-title>{{event.confirmed-event.present}}</mat-card-title>
                   <mat-card-subtitle>Nepřítomných</mat-card-subtitle>
@@ -246,7 +246,7 @@
 
                 <ng-container matColumnDef="datetime">
                   <th mat-header-cell *matHeaderCellDef> Přihlášen </th>
-                  <td mat-cell *matCellDef="let element"> {{ formatDate(element.datetime).toLocaleString('cs-CZ')}} </td>
+                  <td mat-cell *matCellDef="let element"> {{ formatDate(element.datetime)}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="control">
@@ -254,14 +254,14 @@
                   <td mat-cell *matCellDef="let element">
                     <button mat-icon-button
                             class="memberBtn"
-                            (click)="dialogMemberDelete(element.id)"
+                            (click)="dialogMemberDelete(element)"
                             color="warn"
                             matTooltip="Smazat">
                       <mat-icon>remove_circle_outline</mat-icon>
                     </button>
                     <button mat-icon-button
                             class="memberBtn"
-                            (click)="cancel(element.id)"
+                            (click)="cancel(element)"
                             [disabled]="!!!+element.present && !!!+element.confirmed"
                             color="warn"
                             matTooltip="Zrušit">
@@ -269,7 +269,7 @@
                     </button>
                     <button mat-icon-button
                             class="memberBtn"
-                            (click)="present(element.id)"
+                            (click)="present(element)"
                             [disabled]="!!+element.present || !!!+element.confirmed"
                             color="primary"
                             matTooltip="Přítomen">
@@ -277,7 +277,7 @@
                     </button>
                     <button mat-icon-button
                             class="memberBtn"
-                            (click)="confirm(element.id)"
+                            (click)="confirm(element)"
                             [disabled]="!!+element.confirmed"
                             color="primary"
                             matTooltip="Potvrdit">
