--- a/src/app/page-adminmembers/page-adminmembers.component.html
+++ b/src/app/page-adminmembers/page-adminmembers.component.html
@@ -52,7 +52,7 @@
                 class="bottomButton"
                 color="primary"
                 [disabled]="!saveEnable"
-                (click)="addMember()">
+                (click)="addMember(member)">
           {{saveBtnText}}
         </button>
         <button mat-raised-button
