male upravy clenu, logu a progressbar pri loadingu

--- a/src/app/page-adminarticles/page-adminarticles.component.html
+++ b/src/app/page-adminarticles/page-adminarticles.component.html
@@ -18,7 +18,7 @@
           matTooltip="Nový">
     <mat-icon>note_add</mat-icon>
   </button>
-
+  <mat-progress-bar *ngIf="showLoading" mode="indeterminate"></mat-progress-bar>
   <table mat-table
          matSort
          [dataSource]="dataSource"
