--- a/src/app/page-adminlog/page-adminlog.component.css
+++ b/src/app/page-adminlog/page-adminlog.component.css
@@ -24,3 +24,12 @@ mat-form-field {
   float: left;
   padding-right: 2%;
 }
+
+mat-checkbox {
+  float: left;
+  margin-right: 2rem;
+}
+
+mat-progress-bar {
+  margin: 1rem 0 1rem 0;
+}
