--- a/src/app/page-adminlog/page-adminlog.component.css
+++ b/src/app/page-adminlog/page-adminlog.component.css
@@ -33,3 +33,18 @@ mat-checkbox {
 mat-progress-bar {
   margin: 1rem 0 1rem 0;
 }
+
+.table-container {
+  position: relative;
+  max-height: 80vh;
+  overflow: auto;
+}
+
+.ender {
+  position: relative;
+  bottom: 0px;
+  width: 100%;
+  height: 5px;
+  background-color: black;
+  z-index: 100;
+}
